Fix word overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -849,8 +849,12 @@ footer .copyright::before {
   .dropdown-item {
     font-size: 0.6rem;
   }
+  .info i {
+    margin: 1rem 0;
+    font-size: 1.2rem;
+  }
   .info span {
-    font-size: 0.65rem;
+    font-size: 0.8rem;
     margin-left: 0;
   }
 }
@@ -906,10 +910,6 @@ footer .copyright::before {
   }
   .info li {
     margin: 0;
-  }
-  .info i {
-    margin: 1rem 0.5rem;
-    font-size: 1.2rem;
   }
   .social-media i {
     font-size: 2rem;
